# auslib/web/admin/swagger/api.yaml
@@ -575,32 +575,6 @@ paths:
         '400':
           $ref: '#/responses/invalidFormData'
 
-  /history/diff/release/{change_id}/{field}:
-    get:
-      summary: Returns a diff of the value of the named field
-      description: >
-        Returns a diff of the value of the named field from the named object at the specified change_id vs the previous change to that object. [Docs](http://mozilla-balrog.readthedocs.io/en/latest/admin_api.html#history-view-object-change-id-field)
-      tags:
-        - History
-      operationId: auslib.web.admin.views.mapper.release_diff_history_get
-      consumes: []
-      produces:
-        - application/json
-        - text/plain
-      externalDocs:
-        description: "Returns a diff of the value of the named field from the named object at the specified change_id vs the previous change to that object"
-        url: "http://mozilla-balrog.readthedocs.io/en/latest/admin_api.html#history-view-object-change-id-field"
-      parameters:
-        - $ref: '#/parameters/change_id_param'
-        - $ref: '#/parameters/field_name_param'
-      responses:
-        '200':
-          description: Successfully fetched the requested diff value
-        '400':
-          $ref: '#/responses/invalidFormData'
-        '404':
-          $ref: '#/responses/resourceNotFound'
-
   /scheduled_change/diff/release/{sc_id}:
     get:
       summary: Returns a diff of the sc for the provided id
@@ -621,32 +595,6 @@ paths:
       responses:
         '200':
           description: Successfully fetched the requested diff value
-        '400':
-          $ref: '#/responses/invalidFormData'
-        '404':
-          $ref: '#/responses/resourceNotFound'
-
-  /history/view/release/{change_id}/{field}:
-    get:
-      summary: Returns the value of the named field from the named object at specified change_id
-      description: >
-        Returns the value of the named field from the named object at the specified change_id. [Docs](http://mozilla-balrog.readthedocs.io/en/latest/admin_api.html#history-view-object-change-id-field)
-      tags:
-        - History
-      operationId: auslib.web.admin.views.mapper.release_view_history_get
-      consumes: []
-      produces:
-        - application/json
-        - text/plain
-      externalDocs:
-        description: "Returns the value of the named field from the named object at the specified change_id"
-        url: "http://mozilla-balrog.readthedocs.io/en/latest/admin_api.html#history-view-object-change-id-field"
-      parameters:
-        - $ref: '#/parameters/change_id_param'
-        - $ref: '#/parameters/field_name_param'
-      responses:
-        '200':
-          description: Successfully fetched the requested value
         '400':
           $ref: '#/responses/invalidFormData'
         '404':
